--- a/shopmax/shopmax/pom.xml
+++ b/shopmax/shopmax/pom.xml
@@ -75,6 +75,10 @@
 			<version>5.0.0</version>
 			<classifier>jakarta</classifier>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
