--- a/shopmax/shopmax/src/main/resources/application.properties
+++ b/shopmax/shopmax/src/main/resources/application.properties
@@ -24,6 +24,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 # DB 초기화 전략
 spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=create
 
 #jpa 쿼리문 찍어주는 설정
 spring.jpa.properties.hibernate.show_sql=true
