--- a/sns/sns/src/main/resources/application.properties
+++ b/sns/sns/src/main/resources/application.properties
@@ -23,6 +23,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 #spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
 
 # DB 초기화 전략
+#spring.jpa.hibernate.ddl-auto=create
 spring.jpa.hibernate.ddl-auto=update
 
 #jpa 쿼리문 찍어주는 설정
